--- a/mq/pom.xml
+++ b/mq/pom.xml
@@ -38,6 +38,14 @@
             <version>2.3.1</version>
             <scope>test</scope>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.41.0.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
